Funcion de editar Cliente añadido

--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -106,16 +106,13 @@
                   value="Agregar Cliente"
                 />
               </form>
-              <!-- <div class="lds-ellipsis">
-                <div></div>
-                <div></div>
-                <div></div>
-              </div> -->
             </div>
           </div>
         </div>
       </main>
     </div>
+
     <script src="js/nuevocliente.js"></script>
+    <script src="js/funciones.js"></script>
   </body>
 </html>
