Funciones de eliminar añadidas

--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -9,7 +9,9 @@
   </head>
   <body class="min-h-100 bg-gray-200">
     <div class="md:flex min-h-screen md:align-top">
-      <aside class="md:w-2/5 lg:w-2/5 xl:w-1/5 bg-teal-600 px-5 py-10">
+      <aside
+        class="aside-color md:w-2/5 lg:w-2/5 xl:w-1/5 bg-teal-600 px-5 py-10"
+      >
         <h1 class="uppercase text-white tracking-wide text-2xl font-bold mt-2">
           CRM - IndexedDB
         </h1>
@@ -30,7 +32,7 @@
         </nav>
       </aside>
       <!--sidebar-->
-      <main class="md:w-3/5 xl:w-4/5 px-5 py-10 bg-gray-200">
+      <main class="md:w-3/5 xl:w-4/5 px-5 py-10 bg-gray-400">
         <h2 class="text-3xl font-light text-center">Nuevo Cliente</h2>
 
         <div class="flex flex-col mt-10 items-center">
@@ -40,7 +42,7 @@
             <div
               class="shadow overflow-hidden sm:rounded-lg border-b border-gray-200"
             >
-              <form id="formulario" class="bg-white p-3">
+              <form id="formulario" class="bg-white p-3 shadow-md">
                 <div class="mb-4">
                   <label
                     class="block text-gray-700 text-sm font-bold mb-2"
