--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </nav>
       </aside>
       <!--sidebar-->
-      <main class="md:w-3/5 xl:w-4/5 px-5 py-10 bg-gray-200">
+      <main class="md:w-3/5 xl:w-4/5 px-5 py-10 bg-gray-400">
         <h2 class="text-3xl font-light text-center">Clientes</h2>
 
         <div class="flex flex-col mt-10">
           <div class="py-2 overflow-x-auto">
             <div
-              class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200"
+              class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200 shadow-md"
             >
               <table class="min-w-full">
                 <thead class="bg-gray-100">
@@ -68,6 +68,7 @@
         </div>
       </main>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
